examples/test/testpolicy10132.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10132
  namespace: namespace425
spec:
  podSelector:
    matchLabels:
      key41: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value32
          key12: value30
          key22: value5
      podSelector:
        matchLabels:
          key49: value40
          key43: value41
          key42: value20
